--- a/pom.xml
+++ b/pom.xml
@@ -131,7 +131,17 @@
 			<artifactId>commons-dbcp2</artifactId>
 			<version>2.3.0</version>
 		</dependency>
-
+		<!-- mail start -->
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>javax.mail-api</artifactId>
+			<version>1.5.6</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.5.6</version>
+		</dependency>
 
 	</dependencies>
 </project>
